# ollama-telegram-bot

./: .dockerignore  .env.example  BACKLOG_0.0.2.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
locales/: de.json  en.json  es.json  fr.json  it.json
src/: __init__.py  app.py
src/bot/: error_handler.py  handlers.py
src/bot/handlers/: __init__.py
src/config/: settings.py
src/core/: context_store.py  model_preferences_store.py  rate_limiter.py  user_assets_store.py  user_session.py
src/i18n/: __init__.py  service.py
src/services/: model_orchestrator.py  ollama_client.py
src/utils/: logging.py  telegram.py
tests/: test_context_store.py  test_context_store_sqlite.py  test_i18n_pluralization.py  test_i18n_service.py  test_model_orchestrator.py  test_model_preferences_store.py  test_rate_limiter.py  test_rate_limiter_purge_and_secrets.py  test_settings.py  test_settings_pagination.py  test_telegram_utils.py  test_user_session.py
